--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,11 @@
     "rules": {
         "react/react-in-jsx-scope" : 0,
         "react/jsx-filename-extension": 0,
-        "prettier/prettier": 1
+        "prettier/prettier": [
+            "error",
+            {
+              "endOfLine": "auto"
+            }
+          ]
     }
 }
