--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
             {
               "endOfLine": "auto"
             }
-          ]
+          ],
+          "jsx-a11y/click-events-have-key-events": 0
     }
 }
